Add sliding panel and menu and play icons

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,3 +30,7 @@ flutter:
         - asset: fonts/Montserrat-Regular.ttf
         - asset: fonts/Montserrat-SemiBold.ttf
           # weight: 900
+
+    - family: CustomIcons
+      fonts:
+        - asset: fonts/Icons.ttf
