--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   sliding_up_panel: ^1.0.2
+  audioplayers: ^0.15.1
 
 dev_dependencies:
   flutter_test:
@@ -21,6 +22,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/
     - images/
     - icons/
 
@@ -33,4 +35,4 @@ flutter:
 
     - family: CustomIcons
       fonts:
-        - asset: fonts/Icons.ttf
+        - asset: fonts/CustomIcons.ttf
