--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   sliding_up_panel: ^1.0.2
   audioplayers: ^0.15.1
+  expandable: ^4.1.3
 
 dev_dependencies:
   flutter_test:
