--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  provider: ^4.0.5
   sliding_up_panel: ^1.0.2
   audioplayers: ^0.15.1
   expandable: ^4.1.3
