--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   sliding_up_panel: ^1.0.2
   audioplayers: ^0.15.1
   expandable: ^4.1.3
+  photo_view: ^0.9.2
+  flare_flutter: any
 
 dev_dependencies:
   flutter_test:
