--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
   audioplayers: ^0.15.1
   expandable: ^4.1.3
   photo_view: ^0.9.2
-  flare_flutter: any
+  flutter_svg: ^0.17.4
+  # flare_flutter: any
 
 dev_dependencies:
   flutter_test:
